--- a/13vi.html
+++ b/13vi.html
@@ -114,7 +114,7 @@
 
 <div class="container">
     <h1>In Loving Memory</h1>
-    <img src="https://media-del2-2.cdn.whatsapp.net/v/t61.24694-24/461326641_1184422799281913_5111348892241972755_n.jpg?ccb=11-4&oh=01_Q5AaIOKrrdu_G2fmkTg321E82d2B-63RY5gsacsNycEUGWpz&oe=671B6B2F&_nc_sid=5e03e0&_nc_cat=108" alt="Memorial Image" style="max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 20px;">
+    <img src="./photo_6181546816688997771_y.jpg" alt="Memorial Image" style="max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 20px;">
     <p>We invite you to join us in mourning the loss of our beloved Nishchay Aggarwal.</p>
     <p class="date">Date: September 17, 2025</p>
     <p>Location: Aryabhatta Hostel</p>
